--- a/appspec.yml
+++ b/appspec.yml
@@ -5,14 +5,24 @@ files:
     destination: /home/ec2-user/express-app
 hooks:
   ApplicationStop:
-    - location: scripts/application_stop.sh
+    - location: scripts_1/application_stop.sh
       timeout: 300
       runas: ec2-user
   BeforeInstall:
-    - location: scripts/before_install.sh
+    - location: scripts_1/before_install.sh
       timeout: 300
       runas: ec2-user
   ApplicationStart:
-    - location: scripts/application_start.sh
+    - location: scripts_1/application_start.sh
       timeout: 300
       runas: ec2-user
+
+  # AfterInstall:
+  #   - location: scripts/after_install.sh
+  #     timeout: 300
+  #     runas: root
+  # ApplicationStart:
+  #   - location: scripts/application_start.sh
+  #     timeout: 300
+  #     runas: root
+
