--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "nodejs-express-on-aws-ec2",
   "version": "0.0.1",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "express": "4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
